# bimbelsaas

./: .env.example  .env.staging.example  .gitignore  AI_AGENT_GUIDELINES.md  BUSINESS_RULES.md  CLASS_SCHEDULING_SYSTEM.md  CONNECTED_SAAS_WORKFLOW_ROADMAP.md  CORE_FOUNDATION.md  DATABASE_ARCHITECTURE.md  FRONTEND_UI_UX_ROADMAP.md  MULTI_BRANCH_ARCHITECTURE.md  PARENT_EXPERIENCE.md  PERMISSION_MATRIX.md  PROJECT_VISION.md  README.md  ROADMAP.md  ROLE_MATRIX.md  RUNNABLE_MVP_CHECKLIST.md  STAGING_RUNBOOK.md  SUBSCRIPTION_TIER_SYSTEM.md  SYSTEM_ARCHITECTURE.md  TEACHER_WORKFLOW.md  TODO.md  UI_UX_GUIDELINES.md  app.py  compose.staging.yaml  compose.yaml  package-lock.json  package.json  requirements.txt
backend/: pyproject.toml  wsgi.py
backend/app/: __init__.py  config.py  extensions.py  realtime.py  web.py
backend/app/api/: __init__.py
backend/app/common/: __init__.py  cache.py  errors.py  rate_limiter.py  request_context.py  responses.py  status_catalog.py  validation.py
backend/app/domain/: __init__.py  (+8 more)
backend/migrations/: README  env.py
backend/tests/: conftest.py  test_analytics_api.py  test_attendance_api.py  test_audit_log_service.py  test_auth_api.py  test_authorization.py  test_beta_launch_api.py  test_config.py  test_error_handling.py  test_financial_subscription_realtime.py  test_health.py  test_identity_service.py  test_material_api.py  test_organization_api.py  test_parent_experience_api.py  test_people_api.py  test_phase11_hardening.py  test_scale_optimization_api.py  test_scheduling_api.py  test_teacher_workflow_api.py  test_web_security.py
(+144 files in other folders)
