[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "bimbelsaas-backend"
version = "0.1.0"
description = "Core backend for the Premium Multi-Branch Academic Operations Platform"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.1,<4",
  "Flask-Migrate>=4.1,<5",
  "Flask-SQLAlchemy>=3.1,<4",
  "PyJWT>=2.10,<3",
  "psycopg[binary]>=3.2,<4",
  "python-dotenv>=1.1,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
